<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@+id/activity_mesh_info_header_layout" android:background="@color/gray" android:layout_width="match_parent" android:layout_height="@dimen/header_layout">
        <RelativeLayout android:id="@+id/activity_mesh_info_back_layout" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView android:id="@+id/activity_mesh_info_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_arrow_back_24"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/activity_mesh_info_back_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/layout_margin_2"
                android:layout_toEndOf="@+id/activity_mesh_info_back_iv"
                android:text="@string/back"
                android:textColor="@color/header_backgrounds"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/text_size_18" android:textColor="@color/white" android:id="@+id/activity_mesh_info_header_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mesh_converter" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/activity_mesh_info_header_layout">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_mesh_info_norm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_10"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_5"
                android:text="@string/info_about_norms"
                android:textColor="@color/header_backgrounds"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_mesh_info_calculations_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_mesh_info_norm_tv"
                android:layout_marginStart="@dimen/layout_margin_10"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_5"
                android:text="@string/cal_info"
                android:textSize="@dimen/text_size_16" />
            <LinearLayout android:orientation="horizontal" android:layout_marginStart="@dimen/layout_margin_10" android:id="@+id/activity_mesh_info_linear_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_margin_10" android:layout_marginTop="@dimen/layout_margin_15" android:layout_marginEnd="@dimen/layout_margin_5" android:layout_below="@+id/activity_mesh_info_calculations_tv">
                <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/header_backgrounds" android:id="@+id/activity_mesh_info_deu" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/deu" android:layout_weight="0.5"/>
                <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/black0" android:id="@+id/activity_mesh_info_deu_details" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/deu_details" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"   android:layout_marginStart="@dimen/layout_margin_10" android:id="@+id/activity_mesh_info_linear_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_margin_10" android:layout_marginTop="@dimen/layout_margin_30" android:layout_marginEnd="@dimen/layout_margin_5" android:layout_below="@+id/activity_mesh_info_linear_1">
                <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/header_backgrounds" android:id="@+id/activity_mesh_info_usa" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/usa" android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/activity_mesh_info_usa_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/usa_details"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"  android:layout_marginStart="@dimen/layout_margin_10" android:id="@+id/activity_mesh_info_linear_3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_margin_10" android:layout_marginTop="@dimen/layout_margin_30" android:layout_marginRight="@dimen/layout_margin_5" android:layout_below="@+id/activity_mesh_info_linear_2">
                <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/header_backgrounds" android:id="@+id/activity_mesh_info_tyler" android:layout_width="0dp" android:layout_height="wrap_content" android:text="Tyler" android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/activity_mesh_info_tyler_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tyler_details"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>