<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activity_info_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_layout"
        android:background="@color/gray">

        <RelativeLayout
            android:id="@+id/activity_info_back_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/activity_info_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/layout_margin_8"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/activity_info_back_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/layout_margin_8"
                android:layout_toEndOf="@+id/activity_info_back_iv"
                android:fontFamily="@font/handle_go"
                android:text="@string/back"
                android:textColor="@color/header_backgrounds"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>

        <TextView
            android:id="@+id/activity_info_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/handle_go"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15" />
    </RelativeLayout>

    <WebView
        android:id="@+id/activity_info_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>